pods/tailscale/routes/gitea-tailnet-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-tailnet-backend
  namespace: gitea
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: gitea
    app.kubernetes.io/name: gitea
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
